WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270006
ASSERT_WITH_SECURITY_IMPLICATION hit on Messages::NetworkProcess in NetworkConnectionToWebProcess::didReceiveMessage()
https://bugs.webkit.org/show_bug.cgi?id=270006
Summary
ASSERT_WITH_SECURITY_IMPLICATION hit on Messages::NetworkProcess in NetworkCo...
Nicole Rosario
Reported
2024-02-23 13:11:50 PST
ASSERTION FAILED: decoder.messageReceiverName() != Messages::NetworkProcess::messageReceiverName() /Users/nicolerosario/Desktop/BrowserSecurity_3/OpenSource/Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp(242) : virtual void WebKit::NetworkConnectionToWebProcess::didReceiveMessage(IPC::Connection &, IPC::Decoder &) com.apple.WebKit.Networking.Development terminated (pid 50906) for reason: crash #CRASHED - com.apple.WebKit.Networking.Development (pid 50906)
Attachments
Add attachment
proposed patch, testcase, etc.
Nicole Rosario
Comment 1
2024-02-23 13:12:02 PST
rdar://123087621
Nicole Rosario
Comment 2
2024-02-23 13:16:52 PST
Pull request:
https://github.com/apple/WebKit/pull/1095
Nicole Rosario
Comment 3
2024-02-23 17:09:08 PST
Pull request:
https://github.com/apple/WebKit/pull/1098
Nicole Rosario
Comment 4
2024-02-26 11:47:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25121
EWS
Comment 5
2024-02-26 23:11:35 PST
Committed
275369@main
(eaa2c46c3922): <
https://commits.webkit.org/275369@main
> Reviewed commits have been landed. Closing PR #25121 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug