Cherry-pick 275369@main (eaa2c46c3922). https://bugs.webkit.org/show_bug.cgi?id=270006

ASSERT_WITH_SECURITY_IMPLICATION reached on Messages::NetworkProcess in NetworkConnectionToWebProcess::didReceiveMessage()
    https://bugs.webkit.org/show_bug.cgi?id=270006
    rdar://123087621

    Reviewed by Alex Christensen and Chris Dumez.

    Replace assertions checking that `decoder.messageReceiverName() !=
    Messages::NetworkProcess::messageReceiverName()` with MESSAGE_CHECK.
    Network messages from the web content process are safely ignored
    elsewhere already so the assert is not needed

    * Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:
    (WebKit::NetworkConnectionToWebProcess::didReceiveMessage):
    (WebKit::NetworkConnectionToWebProcess::didReceiveSyncMessage):

    Canonical link: https://commits.webkit.org/275369@main

Canonical link: https://commits.webkit.org/274313.187@webkitglib/2.44